2007-11-08  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.cc: Include registry.h.
	(start_help): Launch gpgex help from install directory.
	* client.cc (client_t::call_assuan): Fix bug in last change.

	* client.cc (client_t::call_assuan): Fix FILE command and rename
	all commands to the protocol version.
	(client_t::call_assuan): Report the actual error and remove log
	file reference.

2007-11-02  Werner Koch  <wk@g10code.com>

	* w32-gettext.c (SUBLANG_BENGALI_BANGLADESH): Fix to 2 as per MSDN.
	(SUBLANG_PUNJABI_PAKISTAN): Remove as it is not in MSDN.
	(SUBLANG_ROMANIAN_MOLDOVA): Remove as it is not in MSDN.
	(SUBLANG_ROMANIAN_ROMANIA): Change to value 1 as per MSDN.

	* client.cc (call_assuan): Now use "FILE" instead of "INPUT FILE".

2007-10-22  Marcus Brinkmann  <marcus@g10code.de>

	* exechelp.h (gpgex_spawn_detached): Change signature to just a
	command line.
	* exechelp.c: Rewritten.
	* client.cc (replace_dollar_s): New function.
	(default_uiserver_cmdline): Use it.
	(uiserver_connect): Change caller of gpgex_spawn_detached.

2007-10-17  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (default_uiserver_name): Fix check for dirty hack.

2007-10-16  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (default_uiserver_name): Fall back to HKLM for UI Server.

	* client.cc (default_uiserver_name): Get UI Server from HKCU.

2007-10-15  Marcus Brinkmann  <marcus@g10code.de>

	(client_t::call_assuan): Call uiserver_connect.
	* registry.c: Include assert.h.  Check return value of malloc.
	* exechelp.h, exechelp.c: New files.
	* Makefile.am (gpgex_SOURCES): Add exechelp.h and exechelp.c.
	* main.h (REGKEY): Move to ...
	* registry.h (REGKEY): ... here.
	* main.cc (_gpgme_debug): Put into extern C.
	* main.h: Move debug stuff into ...
	* debug.h: ... this new file.
	* client.cc (default_uiserver_name, uiserver_connect): New functions.

2007-10-05  Marcus Brinkmann  <marcus@g10code.de>

	* main.cc (DllMain): Call WSACleanup.
