@@ -1,3 +1,8 @@
+2007-11-12  Marcus Brinkmann  <marcus@g10code.de>
+
+	* gpgex.cc (get_lang_name): Get preferred language.
+	(start_help): Invoke language specific help.
+
 2007-11-08  Marcus Brinkmann  <marcus@g10code.de>
 
 	* gpgex.cc: Include registry.h.
